[tool.poetry]
name = "beep"
version = "0.1.0"
description = ""
authors = ["Sp00kyB00k <Sp00ky@B00k.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.5.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
